Adds current event view for real time experience

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -122,6 +122,8 @@
     <string name="eclipse_end_full">End of total eclipse</string>
     <string name="eclipse_max">Maximum eclipse</string>
 
+    <string name="active_event">Tap to hear about what\'s currently happening!</string>
+
     <!-- Eclipse Features -->
     <string name="first_contact_description">This is the first moment that the moon, slowly moving from left to right, appears to touch the sun.
         The intensity of the sun\'s light makes it unsafe to look at without special eye protection until the totality, the few minutes during which the moon completely eclipses the sun.
