--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -13,6 +13,8 @@
     <string name="east">Este</string>
     <string name="west">Oeste</string>
 
+    <string name="years">Años</string>
+    <string name="months">Meses</string>
     <string name="date">Fecha</string>
     <string name="time">Hora</string>
     <string name="hours">Horas</string>
