--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -53,6 +53,7 @@
     <string name="error_finding_location">"incapaz de determinar su ubicación actual</string>
     <string name="permission_denied">Permiso denegado</string>
     <string name="location_disabled_message">Ubicación deshabilitada.\nPara continuar, habilite los servicios de ubicación desde la configuración de su dispositivo.</string>
+    <string name="enable_location">Servicio de localización activado</string>
 
     <string name="device_settings_permission">Para continuar, permite el acceso a su ubicación desde la configuración de su dispositivo.</string>
     <string name="app_settings_permission">Para continuar, permite el acceso a su ubicación desde la configuración de la aplicación.</string>
@@ -65,6 +66,10 @@
     <string name="notification_totality">¡El eclipse solar total ha comenzado!</string>
     <string name="tap_listen">Toca para escuchar ahora.</string>
     <string name="enable_notifications">Permitir notificaciones</string>
+    <string name="annular_eclipse_reminder">El Eclipse Solar Anular va a comenzar pronto.</string>
+    <string name="notification_annular_start">El eclipse solar anular ha comenzado!</string>
+    <string name="notification_annular_phase_start">La fase anular ha comenzado!</string>
+    <string name="notification_annularity">La anularidad ha comenzado!</string>
 
     <!-- about -->
     <string name="license">Licencia</string>
@@ -98,6 +103,7 @@
     <string name="event_section_desc">A continuación se indican los eventos en la ubicación más cercana. Los eventos incluyen la hora local y universal.</string>
     <string name="event_desc_format">Evento desde la ubicación más cercana: %1$s, hora local, %2$s, hora universal, %3$s</string>
     <string name="eclipse_center_permission">¡No se pierda este fascinante evento astronómico! Necesitamos su ubicación para acceder a esta función. Presione en cualquier lugar de la pantalla para continuar.</string>
+    <string name="countdown_format">Cuenta regresiva hasta el eclipse en tu ubicación, %1$s años, %2$s meses, %3$s días, %4$s horas, %5$s minutos y %6$s segundos</string>
 
     <string name="location_search">Búsqueda de su ubicación…</string>
     <string name="outside_eclipse_path">Desafortunadamente, el Eclipse no es visible desde su ubicación.</string>
@@ -115,13 +121,26 @@
     <string name="eclipse_type_full">Eclipse solar total</string>
     <string name="eclipse_type_partial">Eclipse solar parcial</string>
     <string name="eclipse_type_none">No Eclipse Solar</string>
-    <string name="eclipse_type_unnkown">Desconocido</string>
+    <string name="eclipse_type_annular">Eclipse Solar Anular</string>
+    <string name="eclipse_type_unkown">Desconocido</string>
+
+    <string name="total_solar_eclipse">Eclipse Solar Total</string>
+    <string name="annular_solar_eclipse">Eclipse Solar Anular</string>
+
+    <string name="annular_start">Comienza el eclipse</string>
+    <string name="annular_phase_start">La fase anular comienza</string>
+    <string name="annularity">Anularidad</string>
+    <string name="annular_phase_end">Finaliza la fase de anularidad</string>
+    <string name="annular_end">Finaliza el eclipse</string>
 
     <string name="eclipse_start_partial">Inicio del eclipse parcial</string>
     <string name="eclipse_start_full">Inicio del eclipse total</string>
     <string name="eclipse_end_partial">Fin del eclipse parcial</string>
     <string name="eclipse_end_full">Fin del eclipse total</string>
     <string name="eclipse_max">Eclipse Total</string>
+
+    <string name="active_event">¡Toca para escuchar lo que está sucediendo actualmente!</string>
+    <string name="next_live_event_countdown">Próximo evento en vivo en %1$s</string>
 
     <!-- media/audio -->
     <string name="media_player">reproductor multimedia</string>
