--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,7 @@
 
     <string name="settings">Settings</string>
     <string name="open_settings">Open Settings</string>
+    <string name="open_description">Open Description</string>
     <string name="description">Description</string>
     <string name="instructions">Instructions</string>
     <string name="welcome">Welcome</string>
