--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -82,7 +82,7 @@
     <string name="libs_in_use">Bibliotecas que utilizamos</string>
     <string name="supported_eclipse">Eclipses que apoyamos</string>
 
-    <string name="about_us">Sobre Nosotros</string>
+    <string name="menu">Menú</string>
     <string name="about_us_details">La aplicación móvil Eclipse Soundscapes es un producto del Eclipse Soundscapes Project, que es una empresa de ARISA Lab, LLC.
         Eclipse Soundscapes Project tiene como objetivo involucrar a TODOS las personas con la astrofísica, con un enfoque intencional en la inclusión y la accesibilidad.
         Para obtener más información, visite EclipseSoundscapes.org. El desarrollo de la aplicación móvil Eclipse Soundscapes está financiado por NASA Space Science Education Consortium.</string>
