--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -126,7 +126,7 @@
 
     <string name="active_event">Tap to hear about what\'s currently happening!</string>
 
-    <string name="next_live_event_countdown">Next live event in %1$s</string>
+    <string name="next_live_event_countdown">Next live event in \n%1$s</string>
 
     <!-- Eclipse Features -->
     <string name="first_contact_description">This is the first moment that the moon, slowly moving from left to right, appears to touch the sun.
