--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -100,6 +100,7 @@
         Agradecemos a la comunidad de código abierto por todas sus contribuciones.</string>
 
     <!-- Eclipse Center -->
+    <string name="next_eclipse_info">La Información del Próximo Eclipse</string>
     <string name="eclipse_center_lockout_details">Próximamente se actualizarán los datos del Eclipse.</string>
     <string name="eclipse_countdown_title">Cuenta regresiva hasta el eclipse</string>
     <string name="event_section_desc">A continuación se indican los eventos en la ubicación más cercana. Los eventos incluyen la hora local y universal.</string>
